--- a/admin/styles/styles.css
+++ b/admin/styles/styles.css
@@ -1,28 +1,190 @@
-.container {
-  width: 100%;
-  margin-top: 20px !important;
-}
-.menu {
-  background-color: #f1f1f1;
-  padding: 10px;
-}
-.menu ul {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+h2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-li a {
-  text-decoration: none;
-  color: #000;
-  text-transform: uppercase;
-  padding: 5px;
+.search-form {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+  padding: 10px;
+  border-radius: 5px;
 }
-ul li:hover {
-  background-color: #ddd;
+
+.search-item {
+  background: 0 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 10px;
+}
+.search-item label {
+  margin: 0;
+  font-size: 16px;
+  color: #555;
+  padding: 10px 20px;
+}
+.search-item input {
+  height: 100%;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  color: #555;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+.search-item input:focus {
+  outline: none;
+}
+
+.search-item input[type="submit"] {
+  height: 100%;
+  display: block;
+  width: 100%;
+  border: 0;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: rgba(172, 255, 47, 0.589);
+  color: black;
+  border-radius: 5px;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+}
+.search-item input[type="submit"]:hover {
+  background-color: rgba(172, 255, 47, 0.589);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.title-table {
+  background-color: rgba(172, 255, 47, 0.589);
+}
+
+.btn-check input {
+  margin: 0;
+}
+
+.btn-setting-delete button {
+  margin-right: 5px;
+}
+
+.btn-setting-delete a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.btn-func {
+  margin-top: 10px;
+}
+
+.btn-func button {
+  margin-right: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #63c76a;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-func button:hover {
+  background-color: #57b85e;
+}
+
+.btn-func a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.pagination a {
+  min-width: 10px;
+  min-height: 10px;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #dee2e6;
+  text-decoration: none;
+  color: #007bff;
+}
+
+.pagination a:hover {
+  background-color: #dee2e6;
+}
+
+.update-btn,
+.delete-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  color: #fff;
+  text-align: center;
+}
+
+.update-btn {
+  background-color: #007bff;
+}
+
+.update-btn:hover {
+  background-color: #0056b3;
+}
+
+.delete-btn {
+  background-color: #dc3545;
+}
+
+.delete-btn:hover {
+  background-color: #c82333;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  border-top: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+}
+.list-item {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.list-item a {
+  display: block;
+  text-decoration: none;
+  color: #007bff;
+}
+.list-item:hover {
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+}
+@media (min-width: 1200px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 80% !important;
+  }
 }
