--- a/admin/styles/styles.css
+++ b/admin/styles/styles.css
@@ -2,8 +2,7 @@ h2 {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-a
-{
+a {
   color: black;
   text-decoration: none;
 }
@@ -45,8 +44,9 @@ a
   outline: none;
 }
 
-#registerClass,#updateClass
-{
+#registerClass,
+#updateClass,
+#registerQuestion {
   background-color: rgba(172, 255, 47, 0.589);
   border-radius: 5px;
   padding: 10px 20px;
